--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ content:
       - layout: left
         title: Poster Presentations
         caption: Animal Behavior Society Conference 2024 | June 25-30, 2024 | University of Western Ontario, Ontario, Canada
-        sub_title: Doing what your neighbors do: Finding evidence of social interaction within an egg clutch using network-based diffusion models
+        sub_title: Doing what your neighbors do - Finding evidence of social interaction within an egg clutch using network-based diffusion models
         
 # Footer
 footer_show_references: true
